--- a/وينه.mw
+++ b/وينه.mw
@@ -18,7 +18,7 @@
 
 د وينې په جوړښت او اکرني غونډال کې رامېنڅ ته شوې ربړې، ووبونه د ناسوبوالي او ناسم کارنتوب په لور ورماتوي. د اسکېميا اصطلاح د هغه ووب اړونده اشاره کوي کوم چې په ناکافي کچه په وينې خړوبېږي. 
 
-وينه په [[سږو]] او بدن کې د [[زړه]] په مرسته په اکرني غونډال کې پمپېږي. زړه ته د وينې د بېرته راستنېدو اضافي فشار بيا د جاذبې د ځواک او د هډتړ د عضلاتو د دندو په مرسته رامېنځ ته کېږي. په تيورو ژويو کې وينه د ليمف سره په يوه توازن کې ده، [[ليمف]] په پرله پسې توګه د وينې نه جوړ شوی (د کپېلري د ډېر چڼېدنې په پايله کې) چې بېرته وينې ته ورستنېږي (د [[توراسيک ډکټ]] له لارې). لېمفاوي اکر اکثراً د دوهم اکر په نامه هم ياد شوی.
+وينه په [[سږی|سږو]] او بدن کې د [[زړه]] په مرسته په اکرني غونډال کې پمپېږي. زړه ته د وينې د بېرته راستنېدو اضافي فشار بيا د جاذبې د ځواک او د هډتړ د عضلاتو د دندو په مرسته رامېنځ ته کېږي. په تيورو ژويو کې وينه د ليمف سره په يوه توازن کې ده، [[ليمف]] په پرله پسې توګه د وينې نه جوړ شوی (د کپېلري د ډېر چڼېدنې په پايله کې) چې بېرته وينې ته ورستنېږي (د [[توراسيک ډکټ]] له لارې). لېمفاوي اکر اکثراً د دوهم اکر په نامه هم ياد شوی.
 
 ==د تيورو ژويو د وينې اناتومي==
 Blood is composed of several kinds of cells (occasionally called ''corpuscles''); these ''formed elements'' of the blood constitute about 45% of whole blood by volume, mostly red blood cells. The other 55% is [[blood plasma]], a fluid that is the blood's liquid medium, appearing yellow in color. The proportion of blood occupied by red blood cells is referred to as the [[hematocrit]].[[Image:SEM blood cells.jpg|thumb|left|230px|A [[scanning electron microscope]] (SEM) image of normal circulating human blood. One can see [[red blood cell]]s, several [[white blood cell]]s including knobby [[lymphocyte]]s, a [[monocyte]], a [[neutrophil]], and many small disc-shaped [[platelet]]s.]]
