--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -55,7 +55,7 @@ __NOTOC__
 | width="50%" style="vertical-align:top; border:1px solid #ccc; background:#fff; padding:.5em;" |
 <div style="align:center; margin-left: 5px; padding:5px; text-align: center; background-color: #f9f9f9; border: 1px solid #e9e9e9;"><br />
 === ژوندليکونه ===
-[[لوبګران]] - [[هنرمندان]] - [[ليکوالان]] - [[وېشنيزه:پښتانه شاعران|پښتانه شاعران]] - [[ډرامه ليکونکي]] - [[کمپوزران]] - [[موسيقي جوړونکي]] - [[سندرغاړي]] - [[فلمي لارښودګران يا ډايرکټران]] - [[د نندارو ليکوالان]] - [[مخترعين]] - [[ساينسپوهان]] - [[شمېرپوهان]] - [[فيلسوفان]] - [[اقتصادپوهان]] - [[تاريخپوهان]] - [[پوه اندي]] - [[سياستپوهان]] - [[اصيلان]] - [[انقلابيان]] - [[لوبغاړي]] - [[طبيبان]] - [[اتلان]] - [[هوابازان]] - [[ستورمزلي]] - [[غازيان]] - [[قاريان]] -[[کاشفان]]- [[مولويان]] - [[ملايان]] - [[خبريالان]]- [[سياستوال]] - [[ولسمشران]] - [[پاچايان]] - [[ملکې]] - [[وزيران]]
+[[لوبګران]] - [[هنرمندان]] - [[ليکوالان]] - [[:وېشنيزه:پښتانه شاعران|پښتانه شاعران]] - [[ډرامه ليکونکي]] - [[کمپوزران]] - [[موسيقي جوړونکي]] - [[سندرغاړي]] - [[فلمي لارښودګران يا ډايرکټران]] - [[د نندارو ليکوالان]] - [[مخترعين]] - [[ساينسپوهان]] - [[شمېرپوهان]] - [[فيلسوفان]] - [[اقتصادپوهان]] - [[تاريخپوهان]] - [[پوه اندي]] - [[سياستپوهان]] - [[اصيلان]] - [[انقلابيان]] - [[لوبغاړي]] - [[طبيبان]] - [[اتلان]] - [[هوابازان]] - [[ستورمزلي]] - [[غازيان]] - [[قاريان]] -[[کاشفان]]- [[مولويان]] - [[ملايان]] - [[خبريالان]]- [[سياستوال]] - [[ولسمشران]] - [[پاچايان]] - [[ملکې]] - [[وزيران]]
 
 === بوب ساينس ===
 
