--- a/حبيب_الله_رفيع.mw
+++ b/حبيب_الله_رفيع.mw
@@ -114,3 +114,4 @@
 [http://www.tolafghan.com/habibullahrafi د ښاغلې حبيب الله رفيع وېبلاګ]
 [[وېشنيزه: پښتانه شاعران]]
 [[وېشنيزه: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه]]
