--- a/محمد_بن_موسی_خوارزمي.mw
+++ b/محمد_بن_موسی_خوارزمي.mw
@@ -57,8 +57,8 @@ by dividing out the coefficient of the square and using the two operations ''{{u
 Several authors have published texts under the name of ''{{unicode|Kitāb al-ǧabr wa-l-muqābala}}'', including {{unicode|[[Abū Ḥanīfa al-Dīnawarī]], [[Abū Kāmil]] (''Rasāla fi al-ǧabr wa-al-muqābala''), [[Abū Muḥammad al-ʿAdlī]], [[Abū Yūsuf al-Miṣṣīṣī]], [[Ibn Turk]], [[Sind ibn ʿAlī]], [[Sahl ibn Bišr]] (author uncertain), and [[Šarafaddīn al-Ṭūsī]]}}.
 
 ===رياضي===
-[[Image:Dixit_algorizmi.png|thumb|Page from a Latin translation, beginning with "Dixit algorizmi"]]
-Al-Khwārizmī's second major work was on the subject of arithmetic, which survived in a [[Latin]] translation but was lost in the original [[Arabic language|Arabic]]. The translation was most likely done in the 12th century by [[Adelard of Bath]], who had also translated the astronomical tables in 1126.
+[[انځور:Dixit_algorizmi.png|thumb|د لاطيني ژباړې د کتاب يو مخ، په "Dixit algorizmi" باندې پيل کوي]]
+د الخورازمي دوهم ستر کار د رياضي په موضوعګانو وه چې د هغه د لاطيني ژبې ژباړه يې خوندي پاتې شوه خو په آرنۍ ژبې، عربي کې چې کښل شوی ؤ په تاريخي پېښو کې له مېنځه ولاړه. د لاطيني ژبې ژباړه يې په ۱۲ مه پېړۍ کې د بات د اديلارد لخوا، چا چې په ۱۱۲۶ ز کال کې د ستورپوهنيز لښتليکونه هم ژباړلي وه، کړې دی.
 
 The Latin manuscripts are untitled, but are commonly referred to by the first two words with which they start: ''Dixit algorizmi'' ("So said al-Khwārizmī"), or ''Algoritmi de numero Indorum'' ("al-Khwārizmī on the Hindu Art of Reckoning"), a name given to the work by [[Baldassarre Boncompagni]] in 1857. The original Arabic title was possibly ''{{unicode|Kitāb al-Jamʿ wa-l-tafrīq bi-ḥisāb al-Hind}}''<ref>Ruska 1917</ref> ("The Book of Addition and Subtraction According to the Hindu Calculation")<ref>Berggren, p. 7</ref>
 {{sect-stub}}
