--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -277,9 +277,9 @@ Astronomy and astrophysics have developed significant interdisciplinary links wi
 * [[Archaeoastronomy]]: the study of ancient or traditional astronomies in their cultural context, utilizing [[archaeology|archaeological]] and [[anthropology|anthropological]] evidence.
 * [[Astrochemistry]]: the study of the [[chemical]]s found in outer space, usually in [[Molecular cloud|molecular gas cloud]]s, and their formation, interaction and destruction. As such, it represents an overlap of the disciplines of astronomy and [[chemistry]].
 
-==Amateur astronomy==
+==لېواله ستورپوهنه==
 {{main|Amateur astronomy}}
-[[Image:Telescope trailer 22.jpg|right|thumb|300px|Amateur astronomers can build their own equipment, and can hold star parties and gatherings, such as [[Stellafane]].]]
+[[انځور:Telescope trailer 22.jpg|ښي|thumb|300px|لېواله ستورپوهان کولای شي خپل اوزارونه پخپله جوړ کړي، دوی د ستورو د څارنو په خاطر ځانګړې مېلمستياوې او غونډې هم لمانځي چې يو له دغو نه يې سټېلافېن دی.]]
 Collectively, amateur astronomers observe a variety of celestial objects and phenomena sometimes with [[Amateur telescope making|equipment that they build themselves]]. Common targets of amateur astronomers include the Moon, planets, stars, comets, meteor showers, and a variety of [[deep-sky object]]s such as star clusters, galaxies, and nebulae. One branch of amateur astronomy, amateur [[astrophotography]], involves the taking of photos of the night sky. Many amateurs like to specialize in the observation of particular objects, types of objects, or types of events which interest them.<ref>{{cite web | url=http://www.amsmeteors.org/ | title = The Americal Meteor Society | accessdate = 2006-08-24 }}</ref><ref>{{cite web | first=Jerry  | last=Lodriguss | url=http://www.astropix.com/ | title = Catching the Light: Astrophotography | accessdate = 2006-08-24 }}</ref>
 
 Most amateurs work at visible wavelengths, but a small minority experiment with wavelengths outside the visible spectrum. This includes the use of infrared filters on conventional telescopes, and also the use of radio telescopes. The pioneer of amateur radio astronomy was [[Karl Guthe Jansky|Karl Jansky]] who started observing the sky at radio wavelengths in the [[1930s]]. A number of amateur astronomers use either homemade telescopes or use radio telescopes which were originally built for astronomy research but which are now available to amateurs (''e.g.'' the [[One-Mile Telescope]]).<ref>{{cite web | author=F. Ghigo | date = 2006-02-07 | url=http://www.nrao.edu/whatisra/hist_jansky.shtml | title = Karl Jansky and the Discovery of Cosmic Radio Waves | publisher = National Radio Astronomy Observatory | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.users.globalnet.co.uk/~arcus/cara/ | title = Cambridge Amateur Radio Astronomers | accessdate = 2006-08-24 }}</ref>
