/* د كائناتو پېداېښت (لويه چاودنه) (بګ بېنګ) */

--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -10,7 +10,7 @@
 بايده چې د نوې ستورپوهنې او  ستورپېژندنې تر مېنځ ټکني نه شو او د دغو ببېلابېلو ډګرونو تر مېنځ توپير وکړو. وروستی نومېدلی نوم، ستورپېژندنه د ګروهو (عقيدو) يو غونډال دی کوم چې د انساني چارو د پېژندلو ادعا او وړاندوینې د اسماني شيانو د موقعيت او د هغو د خپلمنځي اړيکو له ليدنو وروسته رامېنځ ته کېږي. که څه هم چې دا دوه پوهنې يو ګډ آر (اصل) لري، خو د دغو دواړو علمونو پوه اندي په دې باور دي چې دا دوه بېلابېلې پوهنې دي.<ref name="new cosmos">{{cite book | author=Albrecht Unsöld | coauthors=Bodo Baschek, W.D. Brewer (translator) | title=The New Cosmos: An Introduction to Astronomy and Astrophysics | year=2001| location=Berlin, New York | publisher=Springer | id =ISBN 3-540-67877-8 }}</ref>
 
 
-== د كائناتو پېداېښت (لويه چاودنه) (بګ بېنګ) ==
+== د كائناتو پېداېښت (بګ بېنګ) ==
 د كائناتو د [[پېداېښت]] په اړه چې د ستورپېژندونكيو پوهانو كومه [[نظريه]] وړاندې كړې كومه چې نن د ټولو په نزد د منلو وړ ده، او هغه [[نظريه]] چې دا كائنات د يوې لوې چاودنې (بګ بېنګ) په [[نتيجه]] كې منځته راغلي. ددې نظريې تائيد تر څو پېړيو پورې د ستورپېژندونكيو پوهانو د تجربو او لرليدو څخه د لاسته راوړنو له پاېلو څخه هم ؤ. د لوى چاودنې نظريې سره سم دا كاېنات په لومړي سر كې د ناټاكلې شكل په لرلو سره د يوه ستر كاڼي (Primary Nebula) په څېر وه. 
 
 بيا د يوې سترې چاودنې (secondaray separation) په [[نتيجه]] كې كهكشانونه راپېدا شول. او دا كهكشانونه نور زيات ووېشل شول، چې لدې وېش څخه بيا [[ستورې]]، سيارې، [[لمر]] او [[سپوږمۍ]] راپېدا شول. 
