/* د ګېس ستر غونډارې */

--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -25,7 +25,7 @@
 ستورپېژندونكي پدې ګروهه دي چې په كون د كهكشانونو منځته راتلو څخه مخكې دا كون ټول له سره د [[ګېس]] په څېر ول، يانې له كهكشانونو څخه مخكې دا كون د يوه ستر ګېسي غونډارو يا ورېځو په څېر ؤ. او يا ددې مادې لپاره د [[ګېس]] څخه د دوړو كلېمه استعمالول لږ څه ښه راځي، (يانې يوه غېر متشكله دوړو په څېر). 
 د كون دې شكل ته [[قرآن كريم ]]په لاندې [[آيت]] كې داسې اشاره كوي او د (دخان) كلېمه يې راوړې چې د دوړې يا دود په مانا راځي:
 
-** ژباړه: بيا هه د [[اسمان]] اړخ ته پام وړ، كوم چې په هغه وخت كې يوه دوړه وه. هغه [[اسمان]] او زمكې ته وويل: (موجود شئ، كه چېرې ستاسو غواړئ او يا نه غواړئ. دواړو وويل: موږ راغلو امر منونكيو په څېر). (القرآن، ۱۱-۴۱)
+* '''ژباړه''': ''بيا هه د [[اسمان]] اړخ ته پام وړ، كوم چې په هغه وخت كې يوه دوړه وه. هغه [[اسمان]] او زمكې ته وويل: (موجود شئ، كه چېرې ستاسو غواړئ او يا نه غواړئ. دواړو وويل: موږ راغلو امر منونكيو په څېر). (القرآن، ۱۱-۴۱)''
 وګورئ [[قرآن كريم ]]يو بل بيان د (بګ بېنګ) له نظريې سره يوشانوالې.  آيا دا رېښتيا د محمد صلى الله عليه وسلم له [[پېداېښت]] څخه مخكې چاته مالوم ول؟ نو بيا ددې ستر ساېنسي حقيقت كومه بله ذريعه كېدا شي؟ (د بګ بېنګ [[نظريه]] د تېر نږدې وخت ده، خو [[قرآن كريم ]]دا حقيقت ۱۴ پېړۍ مخكې بيان كړې دى.
 
 == د ستورو ترمنځ څه دي؟ ==
