--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -277,8 +277,8 @@ Astronomy and astrophysics have developed significant interdisciplinary links wi
 * [[Archaeoastronomy]]: the study of ancient or traditional astronomies in their cultural context, utilizing [[archaeology|archaeological]] and [[anthropology|anthropological]] evidence.
 * [[Astrochemistry]]: the study of the [[chemical]]s found in outer space, usually in [[Molecular cloud|molecular gas cloud]]s, and their formation, interaction and destruction. As such, it represents an overlap of the disciplines of astronomy and [[chemistry]].
 
-==لېواله ستورپوهنه==
-{{main|Amateur astronomy}}
+== ناڅانګواله ستورپوهنه ==
+{{main|ناڅانګواله ستورپوهنه}}
 [[انځور:Telescope trailer 22.jpg|ښي|thumb|300px|لېواله ستورپوهان کولای شي خپل اوزارونه پخپله جوړ کړي، دوی د ستورو د څارنو په خاطر ځانګړې مېلمستياوې او غونډې هم لمانځي چې يو له دغو نه يې سټېلافېن دی.]]
 Collectively, amateur astronomers observe a variety of celestial objects and phenomena sometimes with [[Amateur telescope making|equipment that they build themselves]]. Common targets of amateur astronomers include the Moon, planets, stars, comets, meteor showers, and a variety of [[deep-sky object]]s such as star clusters, galaxies, and nebulae. One branch of amateur astronomy, amateur [[astrophotography]], involves the taking of photos of the night sky. Many amateurs like to specialize in the observation of particular objects, types of objects, or types of events which interest them.<ref>{{cite web | url=http://www.amsmeteors.org/ | title = The Americal Meteor Society | accessdate = 2006-08-24 }}</ref><ref>{{cite web | first=Jerry  | last=Lodriguss | url=http://www.astropix.com/ | title = Catching the Light: Astrophotography | accessdate = 2006-08-24 }}</ref>
 
