--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -324,12 +324,12 @@ Although the scientific discipline of astronomy has made tremendous strides in u
 {{Wikiversity|Topic:ستورپوهنه}}
 
 === لړليکونه ===
-* [[List of basic astronomy topics]]
-* [[List of astronomy topics]]
-* [[:Category:Ancient astronomy|List of ancient astronomy topics]]
-* [[:Category:Astronomical observatories|List of astronomical observatories]]
-* [[:Category:Astronomy organizations|List of astronomy organisations]]
-* [[:Category:Astronomy timelines|Astronomy timelines]]
+* [[د ستورپوهنې د بنسټيزو سرليکونو لړليک]]
+* [[د ستورپوهنې د سرليکونو لړليک]]
+* [[:وېشنيزه:لرغونې ستورپوهنه|د لرغونې ستورپوهنې د سرليکونو لړليک]]
+* [[:وېشنيزه:ستورپوهنيزه کتنځايونه|د ستورپوهنيزو کتنځايونو لړليک]]
+* [[:وېشنيزه:د ستورپوهنې تنظيمونه|د ستورپوهنې د تنظيمونو لړليک]]
+* [[:وېشنيزه:د ستورپوهنې وختليکه|د ستورپوهنې وختليکه]]
 
 === اړونده ليکنې ===
 * [[Astrology and astronomy]]
