--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -332,12 +332,12 @@ Although the scientific discipline of astronomy has made tremendous strides in u
 * [[:وېشنيزه:د ستورپوهنې وختليکه|د ستورپوهنې وختليکه]]
 
 === اړونده ليکنې ===
-* [[Astrology and astronomy]]
+* [[ستورپېژندنه او ستورپوهنه]]
 * [[Astronomer]]
 * [[Cosmogony]]
-* [[International Year of Astronomy]]
+* [[د ستورپوهنې نړېوال کال]]
 * [[Space exploration]]
-* [[Space science]]
+* [[د تشيال ساينس]]
 
 == اخځليكونه ==
 #  اردو وېكيپېډيا
