--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -270,7 +270,7 @@ Gravitational aggregations clustered into filaments, leaving voids in the gaps. 
 
 Fundamental to the structure of the universe is the existence of [[dark matter]] and [[dark energy]]. These are now thought to be the dominant components, forming 96% of the density of the universe. For this reason, much effort is expended in trying to understand the physics of these components.<ref>{{cite web | last = Preuss | first = Paul | url=http://www.lbl.gov/Science-Articles/Archive/dark-energy.html | title = Dark Energy Fills the Cosmos | publisher = U.S. Department of Energy, Berkeley Lab | accessdate = 2006-09-08 }}</ref>
 
-===Interdisciplinary studies===
+===مېنځپوهنيزې زده کړې===
 {{seealso|Cosmochemistry}}
 Astronomy and astrophysics have developed significant interdisciplinary links with other major scientific fields. These include:
 * [[Astrobiology]]: the study of the advent and evolution of biological systems in the universe.
