--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -234,7 +234,7 @@ As the more massive stars appear, they transform the cloud into an [[H II region
 
 Kinematic studies of matter in the Milky Way and other galaxies have demonstrated that there is more mass than can be accounted for by visible matter. A [[dark matter halo]] appears to dominate the mass, although the nature of this dark matter remains undetermined.<ref>{{cite journal | author=Van den Bergh, Sidney | title=The Early History of Dark Matter | journal=Publications of the Astronomy Society of the Pacific | year=1999 | volume=111 | pages=657-660 | url=http://www.journals.uchicago.edu/PASP/journal/issues/v111n760/990017/990017.html }}</ref>
 
-====Extragalactic astronomy====
+====د کهکشانو دباندې ستورپوهنه====
 {{main|Extragalactic astronomy}}
 The study of objects outside of our galaxy is a branch of astronomy concerned with the [[Galaxy formation and evolution|formation and evolution of Galaxies]]; their morphology and [[Galaxy morphological classification|classification]]; and the examination of [[Active galaxy|active galaxies]], and the [[Galaxy groups and clusters|groups and clusters of galaxies]]. The latter is important for the understanding of the [[large-scale structure of the cosmos]].
 
