--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -209,7 +209,7 @@ Once a planet reaches sufficient mass, the materials with different densities se
 
 A planet or moon's interior heat is produced from the collisions that created the body, radioactive materials (''e.g.'' [[uranium]], [[thorium]], and [[Aluminum#Isotopes|<sup>26</sup>Al]]), or [[tidal acceleration|tidal heating]]. Some planets and moons accumulate enough heat to drive geologic processes such as [[volcanism]] and tectonics. Those that accumulate or retain an [[atmosphere]] can also undergo surface [[erosion]] from wind or water. Smaller bodies, without tidal heating, cool more quickly; and their geological activity ceases with the exception of impact cratering.<ref name="new solar system">{{cite book | editor=J.K. Beatty, C.C. Petersen, A. Chaikin | title=The New Solar System | publisher=Cambridge press | edition = 4th | year=1999 | id =ISBN 0-521-64587-5 }}</ref>
 
-====Stellar astronomy====
+====ستوريزه ستورپوهنه====
 [[Image:ant.nebula.arp.600pix.jpg|thumb|right|260px|The [[Mz3|Ant planetary nebula]]. Ejecting gas from the dying central star shows symmetrical patterns unlike the chaotic patterns of ordinary explosions.]]
 {{main|Star|Stellar astronomy}}
 The study of [[star]]s and [[stellar evolution]] is fundamental to our understanding of the universe. The astrophysics of stars has been determined through observation and theoretical understanding; and from computer simulations of the interior.
