--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -196,7 +196,7 @@ At the center of the Sun is the core region, a volume of sufficient temperature 
 
 A solar wind of plasma particles constantly streams outward from the Sun until it reaches the [[heliopause]]. This solar wind interacts with the [[magnetosphere]] of the [[Earth]] to create the [[Van Allen radiation belt]]s, as well as the [[aurora (astronomy)|aurora]] where the lines of the [[Earth's magnetic field]] descend into the [[Earth's atmosphere|atmosphere]].<ref>{{cite web | author = D. P. Stern, M. Peredo | date = 2004-09-28 | url=http://www-istp.gsfc.nasa.gov/Education/Intro.html | title = The Exploration of the Earth's Magnetosphere | publisher = NASA | accessdate = 2006-08-22 }}</ref>
 
-====Planetary science====
+====د سيارو ساينس ====
 {{main|Planetary science|Planetary geology}}
 This astronomical field examines the assemblage of [[planet]]s, [[natural satellite|moons]], [[dwarf planet]]s, [[comet]]s, [[asteroid]]s, and other bodies orbiting the Sun, as well as [[extrasolar planet]]s. The [[solar system]] has been relatively well-studied, initially through telescopes and then later by spacecraft. This has provided a good overall understanding of the formation and evolution of this planetary system, although many new discoveries are still being made.<ref name="geology">{{cite book | author=J. F. Bell III, B. A. Campbell, M. S. Robinson | title=Remote Sensing for the Earth Sciences: Manual of Remote Sensing | publisher=John Wiley & Sons | edition = 3rd | year=2004 | url=http://marswatch.tn.cornell.edu/rsm.html | accessdate = 2006-08-23 }}</ref>
 
