/* ځانګړو غړو ته اړونده بوغمه */

--- a/بوغمه.mw
+++ b/بوغمه.mw
@@ -18,9 +18,9 @@ Abnormal removal of interstitial fluid is caused by failure of the [[lymphatic s
 In myxedema and a variety of other rarer conditions edema is due to an increased tendency of the tissue to hold water within its extracellular space. In myxedema this is because of an increase in hydrophilic carbohydrate-rich molecules (perhaps mostly hyaluronan) deposited in the tissue matrix. Edema forms more easily in dependent areas in the elderly (sitting in chairs at home or on aeroplanes) and this is not well understood. Estrogens alter body weight in part through changes in tissue water content. There may be a variety of poorly understood situations in which transfer of water from tissue matrix to lymphatics is impaired because of changes in the hydrophilicity of the tissue or failure of the 'wicking' function of terminal lymphatic capillaries.
 
 ==ځانګړو غړو ته اړونده بوغمه==
-Edema will occur in specific organs as part of inflammation, as in pharyngitis, tendonitis or pancreatitis, for instance. Certain organs develop edema through tissue specific mechanisms.
-Examples of edema in specific organs:
-:*[[Cerebral edema]] is extracellular fluid accumulation in the brain. It can occur in toxic or abnormal metabolic states and conditions such as systemic lupus. It causes drowsiness or loss of consciousness.
+د بدن د ځينو ځانګړو غړو د التهاب په وخت کې بوغمه رامېنځ ته کېدلای شي، لکه د ستوني د التهاب، د پلو التهاب او يا د پانکراس التهاب دا ټول بوغمه رامېنځ ته کوي. د بدن ځينې نور غړي د ووبونو د خاص ميکانيزم له مخې بوغمه کېږي.
+په ځانګړو غړو کې د بوغمې بېلګې:
+:*[[مغزي بوغمه]] is extracellular fluid accumulation in the brain. It can occur in toxic or abnormal metabolic states and conditions such as systemic lupus. It causes drowsiness or loss of consciousness.
 :* Pulmonary edema occurs when the pressure in blood vessels in the lung is raised because of obstruction to removal of blood via the pulmonary veins. This is usually due to failure of the left ventricle of the heart. It can also occur in altitude sickness or on inhalation of toxic chemicals. Pulmonary edema produces shortness of breath. [[Pleural effusion]]s may occur when fluid also accumulates in the [[pleural]] cavity.
 
 :*Edema may also be found in the cornea of the eye with glaucoma, severe conjunctivitis or keratitis or after  surgery. It may produce coloured haloes around bright lights.
