/* ځانګړو غړو ته اړونده بوغمه */

--- a/بوغمه.mw
+++ b/بوغمه.mw
@@ -20,7 +20,7 @@ In myxedema and a variety of other rarer conditions edema is due to an increased
 ==ځانګړو غړو ته اړونده بوغمه==
 د بدن د ځينو ځانګړو غړو د التهاب په وخت کې بوغمه رامېنځ ته کېدلای شي، لکه د ستوني د التهاب، د پلو التهاب او يا د پانکراس التهاب دا ټول بوغمه رامېنځ ته کوي. د بدن ځينې نور غړي د ووبونو د خاص ميکانيزم له مخې بوغمه کېږي.
 په ځانګړو غړو کې د بوغمې بېلګې:
-:*[[مغزي بوغمه]] is extracellular fluid accumulation in the brain. It can occur in toxic or abnormal metabolic states and conditions such as systemic lupus. It causes drowsiness or loss of consciousness.
+:*[[مغزي بوغمه]] په ماغزو کې د سلولونو د خارجي مايع د راغونډېدلو په پايله کې رامېنځ ته کېږي. دا د زهرجن او غيرنورمال ميټابوليک دريځ او حالتونو لکه د سيسټېميک لوپس ناروغۍ په وخت کې هم راپېښېدلای شي. داسې حالت په ناروغ کې سربدالي او بې هوشي رامېنڅ ته کوي.
 :* د سږو بوغمه occurs when the pressure in blood vessels in the lung is raised because of obstruction to removal of blood via the pulmonary veins. This is usually due to failure of the left ventricle of the heart. It can also occur in altitude sickness or on inhalation of toxic chemicals. Pulmonary edema produces shortness of breath. [[Pleural effusion]]s may occur when fluid also accumulates in the [[pleural]] cavity.
 
 :*Edema may also be found in the cornea of the eye with glaucoma, severe conjunctivitis or keratitis or after  surgery. It may produce coloured haloes around bright lights.
