--- a/جوزف_سټالين.mw
+++ b/جوزف_سټالين.mw
@@ -1,7 +1,7 @@
 {| border=1 cellpadding=4 cellspacing=0 class="toccolours" style="float: left; width: 240px; clear: both; margin: 0.5em 0 1em 1em; border-style: solid; border:1px solid #7f7f7f; border-right-width: 2px; border-bottom-width: 2px; border-collapse: collapse; font-size: 95%;"
 |+<big><big>'''جوزف سټالين'''</big></big>
 |-
-| style="background:#efefef;" align="center" colspan="2" | [[Image:Stalin1.jpg|200px]]
+| style="background:#efefef;" align="center" colspan="2" | 
 |-
 |'''Office'''
 |'''[[General Secretary of the Central Committee of the Communist Party of the Soviet Union|General Secretary]] / [[Premier of the Soviet Union|Soviet Premier]]'''
