--- a/سکندر_خان_خټک.mw
+++ b/سکندر_خان_خټک.mw
@@ -1,4 +1,4 @@
-سکندر خان خټک هم دخوشحال خان خټک زوی او ټکره شاعر دی دده د زیږیدو نیټه په څر ګند ډول نهده معلومه ،خو کو تحقیقات چې پو هانو کړی دي په (۱۰۶۸) کې زیږیدلی او تر (۱۱۱۶) پوری یې ژوند تعین دی دی هم یو تکړه شاعر او په شعرکې یې دخپل پلار پیروی کړی ده . دشعر نمو نی ته یې ږګورې :
+'''سکندر خان خټک''' هم دخوشحال خان خټک زوی او ټکره شاعر دی دده د زیږیدو نیټه په څر ګند ډول نهده معلومه ،خو کو تحقیقات چې پو هانو کړی دي په (۱۰۶۸) کې زیږیدلی او تر (۱۱۱۶) پوری یې ژوند تعین دی دی هم یو تکړه شاعر او په شعرکې یې دخپل پلار پیروی کړی ده . دشعر نمو نی ته یې ږګورې :
 
 <poem>
 ستا دزلفو مار چیـــــــــچلی نه رغیږی
