*Empty MediaWiki Message*

--- a/سکندر_خان_خټک.mw
+++ b/سکندر_خان_خټک.mw
@@ -1,11 +1,10 @@
 '''سکندر خان خټک''' هم دخوشحال خان خټک زوی او ټکره شاعر دی دده د زیږیدو نیټه په څر ګند ډول نهده معلومه ،خو کو تحقیقات چې پو هانو کړی دي په (۱۰۶۸) کې زیږیدلی او تر (۱۱۱۶) پوری یې ژوند تعین دی دی هم یو تکړه شاعر او په شعرکې یې دخپل پلار پیروی کړی ده . دشعر نمو نی ته یې ږګورې :
 
-<poem>
-ستا دزلفو مار چیـــــــــچلی نه رغیږی
-په بستانو په زیــــــــــــــارتونو په دم هم
-تا چې مخ وته ښکاره کړ لیونی شوي
-پاس دغرونو په سر ګرځي په سم هم
-</Poem>
+{{شعر}}
+{{ب|ستا دزلفو مار چیـــــــــچلی نه رغیږی|په بستانو په زیــــــــــــــارتونو په دم هم}}
+{{ب|تا چې مخ وته ښکاره کړ لیونی شوي|پاس دغرونو په سر ګرځي په سم هم}}
+{{د شعر پای}}
+
 نوموړی دځینو اثارو څښتن هم یادیږی لکه : مهر شدی دیوان د لیلی او مجنون مثنوی او دلی او شهۍ۰
 
 دی د خپل پلار د خوشحال خان خټک پیروان دی
