--- a/سکندر_خان_خټک.mw
+++ b/سکندر_خان_خټک.mw
@@ -1,7 +1,7 @@
 '''سکندر خان خټک''' هم دخوشحال خان خټک زوی او ټکره شاعر دی دده د زیږیدو نیټه په څر ګند ډول نهده معلومه ،خو کو تحقیقات چې پو هانو کړی دي په (۱۰۶۸) کې زیږیدلی او تر (۱۱۱۶) پوری یې ژوند تعین دی دی هم یو تکړه شاعر او په شعرکې یې دخپل پلار پیروی کړی ده . دشعر نمو نی ته یې ږګورې :
 
 {{شعر}}
-{{ب|ستا دزلفو مار چیـــــــــچلی نه رغیږی|په بستانو په زیــــــــــــــارتونو په دم هم}}
+{{ب|ستا دزلفو مار چیـــــــــچلی نه رغیږی|په بستانو په زیـــــــــــارتونو په دم هم}}
 {{ب|تا چې مخ وته ښکاره کړ لیونی شوي|پاس دغرونو په سر ګرځي په سم هم}}
 {{د شعر پای}}
 
