--- a/منهاج_الدين_گهيځ.mw
+++ b/منهاج_الدين_گهيځ.mw
@@ -9,7 +9,7 @@
 
 == دندې ==
 په غږزي ليسه كې يې تر ډېره وخته د ښوونكي په توګه كار وكړ، بيا وروسته د اريانا په بارچالانۍ شركت كې په كابل كې په كار پيل وكړ، د حج پر وخت د همدغه شركت له خوا د حاجيانو د مېلمه پالنې لپاره د سعودي عربستان په جده كې د همدې شركت د استازي په توګه وټاكل شو.
-شهيد ګهيځ څلورو وروڼه لرل چې مشر يې همدى و،  كشر ورور يې ښاغلي [[استاد سعدالدين شپون]] د ګوربت پرله پسې اتمې ګڼې په خپله يوه مركه كې د ګهيځ په اړه وايي: “ګهيځ د ژورې مطالعې خاوند و، ډېره ښه روانه انګرېزي يې لوسته او ويله، يو دنياوي سړى و”.
+شهيد ګهيځ څلورو وروڼه لرل چې مشر يې همدى و،  كشر ورور يې ښاغلي [[سعدالدين شپون|استاد سعدالدين شپون]] د ګوربت پرله پسې اتمې ګڼې په خپله يوه مركه كې د ګهيځ په اړه وايي: “ګهيځ د ژورې مطالعې خاوند و، ډېره ښه روانه انګرېزي يې لوسته او ويله، يو دنياوي سړى و”.
 ګهيځ د همدې ژورې او پراخې مطالعې له مخې راوړاندې شو او د “ګهيځ” رڼا يې خوره كړه.
 ګهيځ يوه خپلواكه اوونيزه جريده وه چې د منهاج الدين ګهيځ په امتياز او مسووليت يې د 1347ل كال د دلوې پر 2مه نېټه په خپرونو پيل وكړ او پر همدغه ورځ يې لومړۍ ګڼه چاپ كړه، چې د ګهيځ جديت او مسووليت ترې له ورايه څرګندېږي.
 
@@ -30,7 +30,6 @@
 ښاغلى شهرت ننګيال چې د ګهيځ ياد په نامه يې پر ګهيځ كتاب كښلى د ګهيځ جريدې د ليندۍ د 6مه نېټه د 2مخ د ګهيځ په اړه د يوې ليكنې اقتباس كړى:
 شخصى بود متواضع، باحوصله، صريح اللهجه، داراى منطق، و استدلال قوى، با جرئت و شهات، مهمان نواز و با دوستان خيلى صميمى، در زنده ګى ساده و بى تكلفى را خوش داشت، بخدا توكل داشت و در راه مبارزه اسلامى چون كوه پا بر جا بود، به علماء احترام و ارادت زيات داشت، مګر وختيكه ميديد بعضى از اّنها از صف مبارزه اسلامى عقب رفته اند خيلى متاثر ميګرديد.
 خو له بده مرغه هېواد دښمنو د دغه غږ ازانګې او انعكاس و نه شو زغملى، او د 1351 كال د وإي پر 16ماښام يې ګهيځ په خپل كاله كې پر شهادت ورساوه.
-
 
 == '''اخځليكونه''' ==
 
