/* د شعر يوه بېلګه */

--- a/سعدالدين_شپون.mw
+++ b/سعدالدين_شپون.mw
@@ -33,53 +33,19 @@
 {{ب|ای مورې زړې مورې ما خو نه وليدې مورې|ته لاړې درنه پاتې شو بېکس ستا نازولی}}
 {{ب|اي مورې دُنيا اور وه زه دې پرېښودم يوازې|اوس ګرځم اسکېرلی، کړېدلی او ترټلی}}
 {{ب|ای مورې په زړه پورې ای درنې پښتنې مورې|د تا د جنازې کټ نورو يوړو هديرې ته}}
-{{ب||}}
-{{ب||}}
-{{ب||}}
-{{ب||}}
-{{ب||}}
-{{ب||}}
+{{ب|خبر شوم چې بمونو مو کوډل کړل دړې وړې|او تا پناه وروړې وه د بل کلي دېرې ته}}
+{{ب|خبر شوم چې زما فوټو دې هر چا ته ښودلې|ځوی ګی مې راروان دی خلقه دې بلې پېرې ته}}
+{{ب|د کلي خلقو وېل چې ده بوډۍ لېونۍ شوې|رڼا ته تور تم وايي سپين سبا تورې تيارې ته}}
+{{ب|چې ساه دې ورکوله زما نوم دې يادولو|تا وې چې آخري ديدن د ځوی شو رانه پاتې}}
+{{ب|ادې خو مجبوري وه، بې دردي وه بې واقي وه|دې سره ښامار په ډېرو کړې ښايسته مېنې ميراتې}}
+{{ب|ما وې د تا په قبر به ډيوې روښانومه|ما وې چې دا ببر سر به په شنختې درته ږدمه}}
+{{ب|ما وې چې ستا کفن به په تودو اوښکو پرېولمه|ما وې چې د جمعې شپه ستا مزار کې تېرومه}}
+{{ب|ما وې ستا د جامو سره د زړه خواله کومه|چې تا قدم پرې ايښی وي هغه ځای ښکلومه}}
+{{ب|ادې خو قسمت بله را وکړه|په يو ساده دُنيا کې ته د خاورو مېلمنه شوې}}
+{{ب|او زه د دُنيا بل سر کې دُعا درته کوم|}}
 {{د شعر پای}}
-
-خبر شوم چې بمونو مو کوډل کړل دړې وړې
-<br>
-او تا پناه وروړې وه د بل کلي دېرې ته
-<br>
-خبر شوم چې زما فوټو دې هر چا ته ښودلې
-<br>
-ځوی ګی مې راروان دی خلقه دې بلې پېرې ته
-<br>
-د کلي خلقو وېل چې ده بوډۍ لېونۍ شوې
-<br>
-رڼا ته تور تم وايي سپين سبا تورې تيارې ته
-<br>
-چې ساه دې ورکوله زما نوم دې يادولو
-<br>
-تا وې چې آخري ديدن د ځوی شو رانه پاتې
-<br>
-ادې خو مجبوري وه، بې دردي وه بې واقي وه
-<br>
-دې سره ښامار په ډېرو کړې ښايسته مېنې ميراتې
-<br>
-ما وې د تا په قبر به ډيوې روښانومه
-<br>
-ما وې چې دا ببر سر به په شنختې درته ږدمه
-<br>
-ما وې چې ستا کفن به په تودو اوښکو پرېولمه
-<br>
-ما وې چې د جمعې شپه ستا مزار کې تېرومه
-<br>
-ما وې ستا د جامو سره د زړه خواله کومه
-<br>
-چې تا قدم پرې ايښی وي هغه ځای ښکلومه
-<br>
-ادې خو قسمت بله را وکړه
-<br>
-په يو ساده دُنيا کې ته د خاورو مېلمنه شوې
-<br>
-او زه د دُنيا بل سر کې دُعا درته کوم
 </center>
 
 
-[[Category: پښتانه شاعران]]
-[[Category: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوالان]]
