*Empty MediaWiki Message*

--- a/سعدالدين_شپون.mw
+++ b/سعدالدين_شپون.mw
@@ -2,18 +2,18 @@
 '''استاد سعدالدين شپون''' د پښتو داستاني اثارو يو بې جوړې او نوښت ګر ليکوال دي .
 خوږ نثر او د څيری کښنې توان دوی له ډيرو معاصرو کيسه ليکوالو بېلوي . او په دې ډول ښاغلی شپون بېل سبک خپلوي .
 
+== ادبي ژوند ==
 د ښاغلي شپون له لوری د کندز د خان اباد سيمې انځورونه ښايي په اوسني پښتو داستاني اثارو کې بې جوړې وي .
 
+== چاپي آثار ==
 دوی تر اوسه درې ناولونه شين ټاغی ، ګټيالی او د سمڅې ياران او د لنډو کيسو يوه ټولګه د بنګي غاړه خپره کړې ده.
 
 استاد ګڼې نورې لنډې کيسې هم ليکلي دي .
 
 استاد شپون څه باندې اووه لسيزې پخوا د افغانستان د کندز په ولايت کې زيږيدلى دى . دوى په دې وروستيو کې خپل ژوند ليک هم خپور کړ چې (( وو نه وو يو شپون وو )) نوميږي .
 
-
 == د شعر يوه بېلګه ==
 <center>'''مور '''
-
 {{شعر}}
 {{ب|د ګـلـو به محــشــر وه خو کـه ورېځــې لـږ سخــي وای|کــه ستا د ټيکــري پيڅکی وای زما به هم مستـــي وای}}
 {{ب|د تــا د لاس ســـابـــه وای چـې بـې تـبـې مـې خـوړلی|د تــا د مينــې اور وای مــورې زه ورکــې ستــي وای}}
