--- a/محمد_زرين_انځور.mw
+++ b/محمد_زرين_انځور.mw
@@ -1,9 +1,15 @@
 ښاغلی محمد زرين انځور په ١٣٣٥ لمريز هجري کال ( ١٩٥٦ ع ) کې د ننګرهار ولايت د مومنددرې ولسوالۍ د ((ګردي غوث )) په کلي کې په يوه منوره کورنۍ کې زېږېدلی دی . پلار يې الحاج عبداللطيف ګرديوال اوږده کلونه د افغانستان د پوهنې د ودې لپاره خدمتونه کړي دي. د هېواد په بېلابيلو سيمو او په تېره بيا په ختيځو ولايتونو کې يې د ښوونکي، پلټونکي او مفتش او په وروستيو کې د ننګرهار د پوهنې د مرستيال په توګه دندې تر سره کړې دي .
-ښاغلي زرين انځور خپلې لومړنۍ زده کړې د هغه وخت (( د ګردي غوث په لومړني ښوونځي )) کې تر سره کړې دي . منځنۍ او ثانوي زده کړې يې د ننګرهار په (( ايمل خان لېسه )) کې د ١٣٥٢ په جوزا کې پای ته ورسولې . په ١٣٥٣ لمريز کال کې يې د کابل پوهنتون د ادبياتو او بشري علومو په پوهنځي کې زده کړې پيل کړې او د ١٣٥٦ کال په پای کې يې د دغه پوهنتون د ژورناليزم له څانګې څخه د ليسانس سند واخيست .
+
+== زده کړې ==
+ښاغلي زرين انځور خپلې لومړنۍ زده کړې د هغه وخت (( د ګردي غوث په لومړني ښوونځي )) کې تر سره کړې دي . منځنۍ او ثانوي زده کړې يې د ننګرهار په (( ايمل خان لېسه )) کې د ١٣٥٢ په جوزا کې پای ته ورسولې . په ١٣٥٣ لمريز کال کې يې د کابل پوهنتون د ادبياتو او بشري علومو په پوهنځي کې زده کړې پيل کړې او د ١٣٥٦ کال په پای کې يې د دغه پوهنتون د ژورناليزم له څانګې څخه د ليسانس سند واخيست . کله چې ښاغلی انځور پېښور ته مهاجر شو نو د هجرت په کلونو کې يې له پېښور پوهنتون څخه په پښتو ژبه او ادبياتو کې ماسټري هم واخيستله.
+
+== دندې ==
 نږدې لس کاله يې د افغانستان په راډيو او تلويزيون کې د راډيو افغانستان د هنر او ادبياتو په اداره کې د ادبي خپرونو د پروډيوسر او بيا ليکوال په توګه کار کړی دی . په ١٣٦٦ کال کې د افغانستان د ليکوالو ټولنې د ادبي نقد او ادبي څېړنو د څانګې مشرشو او له هېواده تر وتلو پورې يې دغه دنده سنبال کړه .
-په ١٣٦٨ لمريز کال کې پېښور ته مهاجر شو او د ازاد افغانستان دليکوالو ټولنې د خپرني ارګان ((خپلواکۍ )) مجله يې څلور کاله وچلوله . په دغو کلونو کې يې له پېښور پوهنتون څخه په پښتو ژبه او ادبياتو کې ماسټري هم واخيستله . په پېښور کې يې د يو شمېر نورو افغان ليکوالو لکه : هر يو ښاغلي محمد صديق پسرلی، حبيب ا لله رفيع ، محمد اصف صميم او امان الله ساهو سره په ګډه (( د افغانستان کلتوري ټولنه )) جوړه کړه چې دغې ټولنې د (( سپېدې )) په نوم ادبي _ کلتوري مجله خپروله او دغه راز يې د افغانستان د مقاومت د ادبياتو د ودې او پياوړتيا لپاره غونډې او سيمينارونه جوړول .
+په ١٣٦٨ لمريز کال کې پېښور ته مهاجر شو او د ازاد افغانستان د ليکوالو ټولنې د خپرني ارګان ((خپلواکۍ )) مجله يې څلور کاله وچلوله . په پېښور کې يې د يو شمېر نورو افغان ليکوالو لکه : هر يو ښاغلي [[محمد صديق پسرلی]]، [[حبيب الله رفيع]] ، [[محمد آصف صميم]] او [[امان الله ساهو]] سره په ګډه (( د افغانستان کلتوري ټولنه )) جوړه کړه چې دغې ټولنې د (( سپېدې )) په نوم ادبي _ کلتوري مجله خپروله او دغه راز يې د افغانستان د مقاومت د ادبياتو د ودې او پياوړتيا لپاره غونډې او سيمينارونه جوړول .
 ښاغلی زرين انځور له ١٩٩٥ کال ( ١٩٧٤ لمريز ) راهيسې له خپلې کورنۍ سره ، د جرمني د کولن په ښار کې اوسي . له ١٩٩٨ ع کال راهيسې يې له يو ګڼ شمير فرهنګيانو او فرهنګپالو سره په ګډه په جرمني کې د افغانستان د کلتوري ودې ټولنه جوړه کړې ده چې تر اوسه يې په لسګونو مهم اثار په پښتو خپاره کړي او يو زيات شمېر ملي _ کلتوري غونډې او سيمينارونه يې جوړ کړي دي .
 ښاغلي زرين انځور لا هغه وخت شعرونه ويل او ليکنې يې کولې چې د ښوونځي شاګرد و، خو هغه اثار يې خپاره شوي نه وو، په کابل پوهنتون کې له زده کړو سره سم يې د افغانستان په مطبوعاتو کې ليکنې او شعرونه خپاره شول . لومړنۍ ليکنې ، شعرونه او لنډې کيسې يې په ١٣٥٤ لمريز کال کې لومړی په ((ننګرهار )) مجله او بيا په ترتيب سره په : زيري جريده، کابل ، پکتيا ، کندهار ، پلوشه او نورو بيلابېلو مجلوکې او بيا په راډيويي او تلويزيوني خپرونو کې خپاره شوي دي .
+
+== ادبي کارونه ==
 د ادبي کار او زيار ډېره برخه يې پښتو کيسه ليکنې او د معاصرو پښتو ادبياتو نقد ( کره کتنې ) او څېړنې ته ځانګړې شوې ده . او دغه راز يې په نورو بېلابېلو ادبي او کلتوري برخو کې هم څېړنې او ليکنې کړې دي . 
 د دغه افغان ليکوال او ژورناليست دغه ځانګړي اثار تر اوسه پورې په کتابي بڼه چاپ او خپاره شوي دي :
 ١ - دا سرونه ، دا رسمونه : دلنډو کيسو لومړۍ ټولګه، کابل، د١٣٦٣ ل چاپ،
