*Empty MediaWiki Message*

--- a/محمد_زرين_انځور.mw
+++ b/محمد_زرين_انځور.mw
@@ -1,4 +1,4 @@
-ښاغلی محمد زرين انځور په ١٣٣٥ لمريز هجري کال ( ١٩٥٦ ع ) کې د ننګرهار ولايت د مومنددرې ولسوالۍ د ((ګردي غوث )) په کلي کې په يوه منوره کورنۍ کې زېږېدلی دی . پلار يې الحاج عبداللطيف ګرديوال اوږده کلونه د افغانستان د پوهنې د ودې لپاره خدمتونه کړي دي. د هېواد په بېلابيلو سيمو او په تېره بيا په ختيځو ولايتونو کې يې د ښوونکي، پلټونکي او مفتش او په وروستيو کې د ننګرهار د پوهنې د مرستيال په توګه دندې تر سره کړې دي .
+ښاغلی '''محمد زرين انځور''' په ١٣٣٥ لمريز هجري کال ( ١٩٥٦ ع ) کې د ننګرهار ولايت د مومنددرې ولسوالۍ د ((ګردي غوث )) په کلي کې په يوه منوره کورنۍ کې زېږېدلی دی . پلار يې الحاج عبداللطيف ګرديوال اوږده کلونه د افغانستان د پوهنې د ودې لپاره خدمتونه کړي دي. د هېواد په بېلابيلو سيمو او په تېره بيا په ختيځو ولايتونو کې يې د ښوونکي، پلټونکي او مفتش او په وروستيو کې د ننګرهار د پوهنې د مرستيال په توګه دندې تر سره کړې دي .
 
 == زده کړې ==
 ښاغلي زرين انځور خپلې لومړنۍ زده کړې د هغه وخت (( د ګردي غوث په لومړني ښوونځي )) کې تر سره کړې دي . منځنۍ او ثانوي زده کړې يې د ننګرهار په (( ايمل خان لېسه )) کې د ١٣٥٢ په جوزا کې پای ته ورسولې . په ١٣٥٣ لمريز کال کې يې د کابل پوهنتون د ادبياتو او بشري علومو په پوهنځي کې زده کړې پيل کړې او د ١٣٥٦ کال په پای کې يې د دغه پوهنتون د ژورناليزم له څانګې څخه د ليسانس سند واخيست . کله چې ښاغلی انځور پېښور ته مهاجر شو نو د هجرت په کلونو کې يې له پېښور پوهنتون څخه په پښتو ژبه او ادبياتو کې ماسټري هم واخيستله.
