--- a/محمد_زرين_انځور.mw
+++ b/محمد_زرين_انځور.mw
@@ -12,21 +12,21 @@
 == ادبي کارونه ==
 د ادبي کار او زيار ډېره برخه يې پښتو کيسه ليکنې او د معاصرو پښتو ادبياتو نقد ( کره کتنې ) او څېړنې ته ځانګړې شوې ده . او دغه راز يې په نورو بېلابېلو ادبي او کلتوري برخو کې هم څېړنې او ليکنې کړې دي . 
 د دغه افغان ليکوال او ژورناليست دغه ځانګړي اثار تر اوسه پورې په کتابي بڼه چاپ او خپاره شوي دي :
-١ - دا سرونه ، دا رسمونه : دلنډو کيسو لومړۍ ټولګه، کابل، د١٣٦٣ ل چاپ،
-٢ - شاړې کوڅې ، د لنډو کيسو دويمه ټولګه، کابل، د١٣٦٧ ل چاپ ،
-٣ - تروږمۍ ، د لنډو کيسو درېيمه ټولګه ، پېښور ، د ١٣٦٩ ل چاپ ،
-٤ - زموږ د کلي پاڼې ، د لنډو کيسو څلورمه ټولګه ، پېښور ، د ١٣٧٢ ل چاپ ،
-٥ - دلته غرونه نه دي هسک ، د لنډو کيسو پنځمه ټولګه ، پېښور ، د ١٣٧٩ ل چاپ،
-د غزل په اننګو کې، د استاد حمزه شينواري د غزلياتو څېړنه او غور چاڼ، کابل، د ١٣٦٤ ل چاپ،
-٦ - د شريف ديوان ، د ننګرهار ددغه اولسي شاعر د شعرونو جونګ، کابل، د ١٣٦٣ ل چاپ،
-٧ - هجري _ د زنځيرونو شاعر، کابل، د ١٣٦٤ ل چاپ،
-٨ - اباسين کيسې کوي، د پښتونخوا د کيسه ليکنې غورچاڼ او څېړنه، کابل، د ١٣٦٤ ل چاپ،
-٩ - شعرونه او نقدونه ، د معاصر پښتو شعر کره کتنه، کابل، د ١٣٦٥ ل چاپ،
-١٠ - د افغانستان د ژورناليزم مخکښان، کابل، د ١٣٦٥ ل چاپ،
-١١ - د مهدي داستاني کليات ( تدوين او سريزه)، کابل، د ١٣٦٧ ل چاپ،
-١٢ - يون ( د استاد حمزه د غزليزې ټولګې تدوين او سريزه )، کابل، د ١٣٦٦ ل چاپ،
-١٣ - خپلواک غږونه (له ښاغلي زلمي هېوادمل سره په ګډه) ، انتخاب او سريزه، کابل، د ١٣٦٨ ل چاپ،
-١٤ - د پټې خزانې ميزان ريښتيا ميزان دی؟ ( له ښاغلي محمد اصف صميم سره په ګډه)، پېښور، د ١٣٦٩ ل چاپ،
-١٥ - د ثور په تراژيدۍ کې فرهنګ، ادبيات او ازادي ، پېښور، د ١٣٧٢ ل چاپ،
-١٦ - د صدر خوشال ژوند او اثار، پېښور، د ١٩٩٦ع چاپ .
+# دا سرونه ، دا رسمونه : دلنډو کيسو لومړۍ ټولګه، کابل، د١٣٦٣ ل چاپ،
+# شاړې کوڅې ، د لنډو کيسو دويمه ټولګه، کابل، د١٣٦٧ ل چاپ ،
+# تروږمۍ ، د لنډو کيسو درېيمه ټولګه ، پېښور ، د ١٣٦٩ ل چاپ ،
+# زموږ د کلي پاڼې ، د لنډو کيسو څلورمه ټولګه ، پېښور ، د ١٣٧٢ ل چاپ ،
+# دلته غرونه نه دي هسک ، د لنډو کيسو پنځمه ټولګه ، پېښور ، د ١٣٧٩ ل چاپ،
+# د غزل په اننګو کې، د استاد حمزه شينواري د غزلياتو څېړنه او غور چاڼ، کابل، د ١٣٦٤ ل چاپ،
+# د شريف ديوان ، د ننګرهار ددغه اولسي شاعر د شعرونو جونګ، کابل، د ١٣٦٣ ل چاپ،
+# هجري _ د زنځيرونو شاعر، کابل، د ١٣٦٤ ل چاپ،
+# اباسين کيسې کوي، د پښتونخوا د کيسه ليکنې غورچاڼ او څېړنه، کابل، د ١٣٦٤ ل چاپ،
+# شعرونه او نقدونه ، د معاصر پښتو شعر کره کتنه، کابل، د ١٣٦٥ ل چاپ،
+# د افغانستان د ژورناليزم مخکښان، کابل، د ١٣٦٥ ل چاپ،
+# د مهدي داستاني کليات ( تدوين او سريزه)، کابل، د ١٣٦٧ ل چاپ،
+# يون ( د استاد حمزه د غزليزې ټولګې تدوين او سريزه )، کابل، د ١٣٦٦ ل چاپ،
+# خپلواک غږونه (له ښاغلي زلمي هېوادمل سره په ګډه) ، انتخاب او سريزه، کابل، د ١٣٦٨ ل چاپ،
+# د پټې خزانې ميزان ريښتيا ميزان دی؟ ( له ښاغلي محمد اصف صميم سره په ګډه)، پېښور، د ١٣٦٩ ل چاپ،
+# د ثور په تراژيدۍ کې فرهنګ، ادبيات او ازادي ، پېښور، د ١٣٧٢ ل چاپ،
+# د صدر خوشال ژوند او اثار، پېښور، د ١٩٩٦ع چاپ .
 دښاغلي  زرين انځورپه سلګونو مقالې د هېواد په مطبوعاتو کې او دغه راز له هېواده بهر مطبوعاتو کې چاپ او خپرې شوې دي .
