--- a/توكبنسټ.mw
+++ b/توكبنسټ.mw
@@ -1,9 +1,8 @@
 '''ډېټابېس''' داسې يو سيسټم دى چې خبرتوكي (ډېټا) پكې پداسې ډول ترتيبېږي چې معلومات ورخڅه په خپل وخت او په دقيقه توګه بياترلاسه كړاى شي. هغه خبرتيايي غونډالونه(systems) چې خبرتوكي پرې ترتيبېږي ډېټابېس ترتيبونكې غونډالې(Database Management systems) بلل كېږي.
 DBMS يا  ډېټابېس منجمنټ سيسټم  يوداسې سافتوېر دى چې منېجرانو ته د  ډېټا او د ډېټافايلونو   ترمينځ د اړيكو، دجوړولو، په خپل حال ساتلو او دهغو د راپور وركولو په كار كې لاس كوي.  پداسې حال كې چې  د فايلم منجمنټ سيسټم چې پدې اړه يو زوړ پروګرام دى په يوه وخت كې يوازې له يوه فايل څخه د ګټې اخستلو صلاحيت لاره، ډېټابېس منجمنټ سيسټم دغې عمليې ته ګڼې بډاينې وركوي چې لاندي يې څېړو:
 
-== دا سيستم د ډېټا اضافه ښودنه  (Redundancy) كموي : ==
+== دا سيستم د ډېټا اضافه ښودنه (Redundancy) كموي ==
 د اضافي ښودنې مطلب دادى چې همهاغه ډېټا په يوه بل جدول كې په بله بڼه وښودل شي. لكه داچې د يوه ګراك(customer) نوم، ادرس او تليفوني شمېره، هم د كتل شويو حسابونو او هم د لاسته راوړل شويو حسابونو په جلا جلا فايلونو كې په يوه وخت ثبت شي چې دا بيا دتصفيې او نويولو په چار كې ربړه جوړوي نو د اضافي ريكارډ لرونكو فايلونو تصفيه ډېر وخت او لګښت ته اړتيا لري.
-
 
 == د خبرتوكيو يوځايوالى او تماميت خوندي كوي: ==
 د خبرتوكيو(Data) تماميت دهغې دقت، مظبوتيا او تردمه والي(Up-to-date) ته وايي، كه همدا خبرتوكي په بېلابېلو فايلونو كې وساتلى شي  نو يوځايي تردمه كونه(Updating) به يې ناشونى كاروي، ټول عناصر به يې يوځاى نشي نوي كېداى او كېداى شي ډېر ناسممعلوماتي راپورونه يې وركړاى شي.
